fixed up button spacing issue on page. Needed to make more space available so it doesn't break its column. Now need to fix featured products section and redo products and services page(take the border off of the picture and description. Keep only on the picture. Also change the grid break points so the image doesn't become distorted.

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -94,11 +94,10 @@ body {
     padding-top: 50px;
 }
 
-.card {
-    margin-left: 30px;
-    margin-right: 20px;
-    margin-bottom: 30px;
-}
+/*.card {*/
+/*    margin-left: 30px;*/
+/*    margin-bottom: 30px;*/
+/*}*/
 
 .card-text{
     text-align: center;
@@ -151,7 +150,6 @@ button{
     cursor: pointer;
     padding: 25px 80px;
     display: inline-block;
-    margin: 15px 30px;
     text-transform: uppercase;
     letter-spacing: 1px;
     font-weight: 900;
